--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,12 +10,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   cupertino_icons: ^0.1.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   pedantic: ^1.9.0
+  flappy_translator:
+    git:
+      url: https://github.com/smartnsoft/FlappyTranslator
 
 flutter:
   uses-material-design: true
@@ -50,3 +55,14 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+flappy_translator:
+  input_file_path: "assets_dev/localizations/localizations.csv"
+  output_dir: "lib"
+  file_name: "localizations"
+  class_name: "AppLocalizations"
+  delimiter: ";"
+  start_index: 1
+  depend_on_context: false
+  use_single_quotes: true
+  replace_no_break_spaces: false
