--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -51,6 +51,17 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+    
+    flavorDimensions 'default'
+    productFlavors {
+        dev {
+            dimension 'default'
+            applicationIdSuffix '.dev'
+        }
+        prod {
+            dimension 'default'
+        }
+    }
 }
 
 flutter {
