--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^0.1.3
   provider: ^4.3.2+1
+  firebase_core: ^0.5.0
 
 dev_dependencies:
   flutter_test:
