--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,9 @@ app.*.symbols
 
 # Obfuscation related
 app.*.map.json
+
+# Firebase
+android/app/src/dev/google-services.json
+android/app/src/prod/google-services.json
+ios/Runner/Firebase/dev/GoogleService-Info.plist
+ios/Runner/Firebase/prod/GoogleService-Info.plist
