--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Freebox dev",
+            "name": "Freebox dev debug",
             "request": "launch",
             "type": "dart",
             "program": "lib/main_dev.dart",
@@ -12,7 +12,7 @@
             ]
         },
         {
-            "name": "Freebox prod",
+            "name": "Freebox prod debug",
             "request": "launch",
             "type": "dart",
             "program": "lib/main_prod.dart",
