--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   firebase_core: ^0.5.0
   firebase_analytics: ^6.0.0
   material_design_icons_flutter: ^4.0.5555
+  google_fonts: ^1.1.0
 
 dev_dependencies:
   flutter_test:
