--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,8 +5,8 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
-  flutter: ">=1.20.0 < 2.0.0"
+  sdk: ">=2.10.0 <3.0.0"
+  flutter: ">=1.22.0 < 2.0.0"
 
 dependencies:
   flutter:
@@ -19,6 +19,8 @@ dependencies:
   firebase_analytics: ^6.0.0
   material_design_icons_flutter: ^4.0.5555
   google_fonts: ^1.1.0
+  hive: ^1.4.4
+  path_provider: ^1.6.18
 
 dev_dependencies:
   flutter_test:
