--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   provider: ^4.3.2+1
   firebase_core: ^0.5.0
   firebase_analytics: ^6.0.0
+  cloud_firestore: ^0.14.1+3
+  firebase_storage: ^4.0.1
   material_design_icons_flutter: ^4.0.5555
   google_fonts: ^1.1.0
   hive: ^1.4.4
