--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,22 +13,25 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  cloud_firestore: ^0.14.1+3
   cupertino_icons: ^0.1.3
-  provider: ^4.3.2+1
-  firebase_core: ^0.5.0
   firebase_analytics: ^6.0.0
-  material_design_icons_flutter: ^4.0.5555
+  firebase_core: ^0.5.0
+  firebase_storage: ^4.0.1
   google_fonts: ^1.1.0
   hive: ^1.4.4
+  material_design_icons_flutter: ^4.0.5555
   path_provider: ^1.6.18
+  provider: ^4.3.2+1
+  uuid: ^2.2.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  pedantic: ^1.9.0
   flappy_translator:
     git:
       url: https://github.com/smartnsoft/FlappyTranslator
+  pedantic: ^1.9.0
 
 flutter:
   uses-material-design: true
@@ -69,4 +72,3 @@ flappy_translator:
   depend_on_context: false
   use_single_quotes: true
   replace_no_break_spaces: false
-
