--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   cloud_firestore: ^0.14.1+3
   cupertino_icons: ^0.1.3
   firebase_analytics: ^6.0.0
+  firebase_auth: ^0.18.1+2
   firebase_core: ^0.5.0
   firebase_storage: ^4.0.1
   google_fonts: ^1.1.0
