--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,8 +19,10 @@ dependencies:
   firebase_auth: ^0.18.1+2
   firebase_core: ^0.5.0
   firebase_storage: ^4.0.1
+  flutter_bloc: ^6.0.6
   google_fonts: ^1.1.0
   hive: ^1.4.4
+  image_picker: ^0.6.7+11
   material_design_icons_flutter: ^4.0.5555
   path_provider: ^1.6.18
   provider: ^4.3.2+1
